# timelapse

./: .gitignore  Dockerfile  LICENSE.txt  README.md  entrypoint.sh  pyproject.toml  timelapse.py
.github/workflows/: docker-image.yml
